Start on HyperHeaderCollection

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,8 +6,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/src/bin/Debug/net8.0/HyperSharp.dll",
-            "args": [],
+            "program": "${workspaceFolder}/tests/bin/Debug/net8.0/HyperSharp.Tests.dll",
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
             "stopAtEntry": false,
