--- a/tests/HyperSharp.Tests.csproj
+++ b/tests/HyperSharp.Tests.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="../res/config.json" CopyToOutputDirectory="Always" />
     <ProjectReference Include="../src/HyperSharp.csproj" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
