--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,42 +3,65 @@ name: Publish Release
 on:
   release:
     types:
-      - published
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: Tag
-        required: true
-        default: latest
+      - "published"
+  push:
+    paths:
+      - ".github/workflows/release.yml"
+
+env:
+  DOTNET_NOLOGO: 1
+  DOTNET_CLI_TELEMETRY_OPTOUT: 1
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+  DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: 1
 
 jobs:
-  publish-docker-image:
-    name: Publish Docker Image
-    runs-on: self-hosted
-    if: "!contains(format('{0} {1}', github.event.head_commit.message, github.event.pull_request.title), '[ci-skip]')"
+  publish_release:
+    name: Publish Release
+    runs-on: "self-hosted"
+    if: "!contains(format('{0} {1}', github.event.head_commit.message, github.event.pull_request.title), '[ci-skip]') && contains(github.event.release.target_commitish, 'master') && github.event_name == 'release'"
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Get Previous tag
-        id: previoustag
-        uses: WyriHaximus/github-action-get-previous-tag@master
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner  }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and Push
-        uses: docker/build-push-action@v2
+          dotnet-version: 8
+      - name: Publish NuGet packages
+        run: |
+          mkdir build
+          dotnet pack -c Release -o build
+          dotnet nuget push "build/*" -k ${{ secrets.NUGET_ORG_API_KEY }} -s https://api.nuget.org/v3/index.json
+      - name: Upload NuGet packages to GitHub Actions
+        uses: actions/upload-artifact@v3
         with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          build-args: VERSION=${{ steps.previoustag.outputs.tag }}
-          tags: |
-            ghcr.io/oolunar/hypersharp:latest
-            ghcr.io/oolunar/hypersharp:${{ steps.previoustag.outputs.tag }}
+          name: HyperSharp Release ${{ github.event.release.name }} NuGet Packages.zip
+          path: build/*
+      - name: Upload NuGet Packages To GitHub Release
+        uses: "ncipollo/release-action@v1"
+        with:
+          allowUpdates: true
+          artifactErrorsFailBuild: true
+          artifacts: "build/*"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          omitNameDuringUpdate: true # We don't want to update the name of the release.
+          omitBodyDuringUpdate: true # We don't want to update the body of the release.
+  test_release:
+    name: Test Release
+    runs-on: "self-hosted"
+    if: "!contains(github.event.head_commit.message, '[ci-skip]') && github.ref_name == 'master' && github.event_name == 'push'"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 8
+      - name: Publish NuGet packages
+        run: |
+          mkdir build
+          dotnet pack -c Release -o build
+      - name: Upload NuGet packages to GitHub Actions
+        uses: actions/upload-artifact@v3
+        with:
+          name: HyperSharp Release ${{ github.event.release.name }} NuGet Packages.zip
+          path: build/*
