--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Publish NuGet packages
         run: |
           mkdir build
-          dotnet pack -c Release -o build
+          dotnet pack -c Release -o build /p:Version=${{ github.event.release.tag_name }}
           dotnet nuget push "build/*" -k ${{ secrets.NUGET_ORG_API_KEY }} -s https://api.nuget.org/v3/index.json
       - name: Upload NuGet packages to GitHub Actions
         uses: actions/upload-artifact@v3
