--- a/src/HyperSharp/HyperSharp.csproj
+++ b/src/HyperSharp/HyperSharp.csproj
@@ -16,8 +16,8 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
   <ItemGroup>
-    <EmbeddedResource Include="../LICENSE" Pack="true" PackagePath="" />
-    <EmbeddedResource Include="../README.md" Pack="true" PackagePath="" />
+    <EmbeddedResource Include="../../LICENSE" Pack="true" PackagePath="" />
+    <EmbeddedResource Include="../../README.md" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FluentResults" Version="3.15.2" />
