--- a/src/HyperSharp/HyperSharp.csproj
+++ b/src/HyperSharp/HyperSharp.csproj
@@ -25,5 +25,6 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
     <PackageReference Include="System.IO.Pipelines" Version="7.0.0" />
+    <PackageReference Include="Ulid" Version="1.2.6" />
   </ItemGroup>
 </Project>
