--- a/tests/HyperSharp.Tests.csproj
+++ b/tests/HyperSharp.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="../res/config.json" CopyToOutputDirectory="Always" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.6" />
     <ProjectReference Include="../src/HyperSharp/HyperSharp.csproj" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
