--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
