See if it's a permissions issue

--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -13,8 +13,7 @@ env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
   DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: 1
 
-permissions:
-  discussions: write
+permissions: write-all
 
 jobs:
   build_commit:
