Try actions permission

--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -13,7 +13,8 @@ env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
   DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: 1
 
-permissions: write-all
+permissions:
+  actions: write
 
 jobs:
   build_commit:
