Run on script update or on certain PR events

--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - ".github/workflows/build-commit.yml"
       - "src/**"
+      - "tools/parse-benchmarkdotnet-json.sh"
       - "HyperSharp.sln"
   workflow_dispatch:
 
