--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
   push:
     paths:
       - ".github/workflows/release.yml"
+      - "Directory.Build.props"
       - "*.sln"
       - "*.csproj"
 
