--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -10,7 +10,6 @@ on:
     paths:
       - ".github/workflows/build-pr.yml"
       - "src/**"
-      - "tools/parse-benchmarkdotnet-json.sh"
       - "HyperSharp.sln"
 
 env:
@@ -51,7 +50,7 @@ jobs:
       - name: Output Test Results
         id: test-results
         run: |
-          body="$(bash tools/parse-benchmarkdotnet-json.sh $(realpath BenchmarkDotNet.Artifacts/results/OoLunar.HyperSharp.Tests.Benchmarks.Benchmarks.ConcurrentRequests-report-brief.json))"
+          body="$(cat benchmark-results.md)"
           delimiter="$(openssl rand -hex 8)"
           echo "body<<$delimiter" >> $GITHUB_OUTPUT
           echo "$body" >> $GITHUB_OUTPUT
