Build and test whenever tests are modified

--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - ".github/workflows/build-commit.yml"
       - "src/**"
+      - "tests/**"
       - "HyperSharp.sln"
   workflow_dispatch:
 
