Don't invoke GH Actions on config modifications

--- a/.github/workflows/resources.yml
+++ b/.github/workflows/resources.yml
@@ -6,6 +6,8 @@ on:
       - ".github/workflows/resources.yml"
       - "res/**"
       - "tools/generate-assets.sh"
+    paths-ignore:
+      - "res/config.json"
   workflow_dispatch:
 
 permissions: write-all
