Move benchmarks out of the test folder and into the benchmarks folder

--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           dotnet-version: 8
       - name: Test Project
-        run: dotnet run -c Release --project tests/HyperSharp.Tests.csproj >/dev/null
+        run: dotnet run -c Release --project benchmarks/HyperSharp.Tests.csproj >/dev/null
       - name: Output Test Results
         id: test-results
         run: |
