Update paths for workflows

--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - ".github/workflows/build-commit.yml"
+      - "benchmarks/**"
       - "src/**"
       - "tests/**"
       - "HyperSharp.sln"
