--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   build_commit:
-    name: Build Commit ${{ github.sha }}
+    name: Build Commit
     runs-on: self-hosted
     if: "!contains(format('{0} {1}', github.event.head_commit.message, github.event.pull_request.title), '[ci-skip]')"
     steps:
@@ -33,9 +33,20 @@ jobs:
       - name: Build Project
         run: dotnet build
   test_commit:
-    name: Benchmark Commit ${{ github.sha }}
+    name: Test Commit
     runs-on: self-hosted
     needs: build_commit
+    steps:
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 8
+      - name: Test Project
+        run: dotnet test
+  benchmark_commit:
+    name: Benchmark Commit
+    runs-on: self-hosted
+    needs: test_commit
     permissions:
       contents: write
     steps:
@@ -43,8 +54,8 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 8
-      - name: Test Project
-        run: dotnet run -c Release --project benchmarks/HyperSharp.Tests.csproj >/dev/null
+      - name: Benchmark Project
+        run: dotnet run -c Release --project benchmarks/HyperSharp.Benchmarks.csproj
       - name: Output Test Results
         id: test-results
         run: |
