--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -22,7 +22,7 @@ env:
 
 jobs:
   build_pr:
-    name: Build PR \#${{ github.event.pull_request.number }}
+    name: "Build PR #${{ github.event.pull_request.number }}"
     runs-on: self-hosted
     if: "!contains(format('{0} {1}', github.event.head_commit.message, github.event.pull_request.title), '[ci-skip]')"
     steps:
@@ -37,7 +37,7 @@ jobs:
       - name: Build Project
         run: dotnet build
   test_pr:
-    name: Test PR \#${{ github.event.pull_request.number }}
+    name: "Test PR #${{ github.event.pull_request.number }}"
     runs-on: self-hosted
     needs: build_pr
     steps:
@@ -48,7 +48,7 @@ jobs:
       - name: Test Project
         run: dotnet test
   benchmark_pr:
-    name: Benchmark PR \#${{ github.event.pull_request.number }}
+    name: "Benchmark PR #${{ github.event.pull_request.number }}"
     runs-on: self-hosted
     needs: test_pr
     permissions:
