--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,11 +2,16 @@ name: .NET Docs
 on:
   release:
     types:
-      - published
-  workflow_dispatch:
+      - "published"
   push:
-    branches:
-      - master
+    paths:
+      - ".github/workflows/docs.yml"
+      - "docs/**"
+      - "src/**"
+      - "tools/**"
+      - "Directory.Build.props"
+      - "*.sln"
+  workflow_dispatch:
 
 env:
   DOTNET_NOLOGO: 1
@@ -19,6 +24,7 @@ permissions:
 
 jobs:
   build:
+    name: Build Docs
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
@@ -36,20 +42,16 @@ jobs:
     - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v1
       with:
-        # Path of the directory containing the static assets.
-        path: ./docs/_site/ # default is _site/
+        path: ./docs/_site/
   deploy:
-    # Add a dependency to the build job
+    name: Deploy to GitHub Pages
     needs: build
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-    # Deploy to the github-pages environment
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    # Specify runner + deployment step
     runs-on: self-hosted
     steps:
       - name: Deploy to GitHub Pages
