--- a/src/HyperSharp/HyperSharp.csproj
+++ b/src/HyperSharp/HyperSharp.csproj
@@ -1,9 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk" InitialTargets="HelloWorld">
+  <UsingTask TaskName="HyperSharp.Tools.MakeShiftSourceGeneration.Generators.HttpConstructorGenerator" AssemblyFile="/home/lunar/Code/OoLunar/HyperSharp/tools/MakeShiftSourceGeneration/bin/Debug/netstandard2.0/HyperSharp.Tools.MakeShiftSourceGeneration.dll" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <Description>A C# implementation of the HTTP 1.1 protocol.</Description>
     <PackageId>OoLunar.HyperSharp</PackageId>
   </PropertyGroup>
+  <Target Name="HelloWorld">
+    <HttpConstructorGenerator />
+  </Target>
   <ItemGroup>
     <ProjectReference Include="../../tools/MakeShiftSourceGeneration/HyperSharp.Tools.MakeShiftSourceGeneration.csproj" PrivateAssets="all" />
     <ProjectReference Include="../HyperSharp.Results/HyperSharp.Results.csproj" />
