--- a/src/HyperSharp/HyperSharp.csproj
+++ b/src/HyperSharp/HyperSharp.csproj
@@ -1,15 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" InitialTargets="HelloWorld">
-  <UsingTask TaskName="HyperSharp.Tools.MakeShiftSourceGeneration.Generators.HttpConstructorGenerator" AssemblyFile="/home/lunar/Code/OoLunar/HyperSharp/tools/MakeShiftSourceGeneration/bin/Debug/netstandard2.0/HyperSharp.Tools.MakeShiftSourceGeneration.dll" />
+﻿<Project Sdk="Microsoft.NET.Sdk" InitialTargets="GenerateHttpConstructor">
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <Description>A C# implementation of the HTTP 1.1 protocol.</Description>
     <PackageId>OoLunar.HyperSharp</PackageId>
   </PropertyGroup>
-  <Target Name="HelloWorld">
-    <HttpConstructorGenerator />
-  </Target>
   <ItemGroup>
-    <ProjectReference Include="../../tools/MakeShiftSourceGeneration/HyperSharp.Tools.MakeShiftSourceGeneration.csproj" PrivateAssets="all" />
     <ProjectReference Include="../HyperSharp.Results/HyperSharp.Results.csproj" />
     <ProjectReference Include="../HyperSharp.Responders/HyperSharp.Responders.csproj" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
@@ -18,4 +13,5 @@
     <PackageReference Include="System.IO.Pipelines" Version="7.0.0" />
     <PackageReference Include="Ulid" Version="1.2.6" />
   </ItemGroup>
+  <Import Project="$(ProjectRoot)/tools/MakeShiftSourceGeneration/MakeShiftSourceGenerator.targets" />
 </Project>
