Fix memory leak which would cause invalid connections to stay within the _openConnections concurrent stack

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/tests/bin/Debug/net8.0/HyperSharp.Tests.dll",
+            "program": "${workspaceFolder}/benchmarks/bin/Debug/net8.0/HyperSharp.Benchmarks.dll",
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
             "stopAtEntry": false,
